# xcursor-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: env_vars.rs  lib.rs  main.rs  parser.rs
xcursor/: Cargo.toml
xcursor-parser/: Cargo.toml
xcursor-parser/src/: lib.rs
