[package]
name = "xcursor"
description = "A library for loading XCursor themes"
version = "0.3.8"
edition = "2018"

authors = ["Samuele Esposito"]
license = "MIT"
repository = "https://github.com/esposm03/xcursor-rs"
documentation = "https://docs.rs/xcursor"
readme = "README.md"

include = ["**/*.rs", "Cargo.toml", "LICENSE", "README.md"]
