[package]
name = "xcursor-parser"
description = "A library for parser XCursor themes"
version = "0.1.0"
edition = "2018"

authors = ["Samuele Esposito"]
license = "MIT"
repository = "https://github.com/esposm03/xcursor-rs"
documentation = "https://docs.rs/xcursor"
readme = "README.md"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
nom = "5"
